@@ -1,3 +1,9 @@
+2004-07-10  Dom Lachowicz <cinamod@hotmail.com>
+
+	* rsvg-styles.c: Fix bug #145477 - RSVG can now handle relative
+	paths to image resources
+	* rsvg-file-util.c: Ditto
+	
 2004-07-09  Dom Lachowicz <cinamod@hotmail.com>
 
 	* rsvg-styles.c: Fix bug #145392, by 
